# django-istat-italian-places

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  boot_django.py  makemigrations.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg
.github/: dependabot.yml  release.yml
.github/workflows/: codeql.yml  python-publish.yml
bruno/comuni_italiani/: Comuni.bru  Province.bru  Regioni.bru  bruno.json
comuni_italiani/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
comuni_italiani/management/commands/: import_istat_data.py
comuni_italiani/migrations/: 0001_initial.py  0002_remove_comune_auto_code_provincia_auto_code.py  0003_alter_comune_options_alter_provincia_options_and_more.py  0004_comune_geographic_partition.py  0005_remove_comune_created_at_remove_comune_created_by_and_more.py
comuni_italiani/tests/: settings.py
comuni_italiani/tests/regioni/: fixtures.py  test_regioni_models.py
comuni_italiani/utils/: dynamic_field_serializers.py  italian_localization.py
