[metadata]
name = django-istat-localization
version = 0.2.3
description = A Django app to add ISTAT data resources Regions, Provinces and Cities.
long_description = file: README.rst
author = Francesco Cataldo
author_email = francy111200@gmail.com
license = BSD-3-Clause
classifiers =
Environment :: Web Environment
Framework :: Django :: 4.2
Intended Audience :: Developers
License :: OSI Approved :: BSD License
Operating System :: OS Independent
Programming Language :: Python :: 3
Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires = Django >= 4.0
