[metadata]
name = django-istat-italian-places
version = 0.3.0
description = A Django app to add ISTAT data resources Regions, Provinces and Cities from updated Official CSV file.
long_description = file: README.rst
url = https://github.com/FraCata00/django-istat-localization
author = Francesco Cataldo
author_email = francy111200@gmail.com
license = BSD-3-Clause
classifiers =
Environment :: Web Environment
Framework :: Django :: 4.2
Intended Audience :: Developers
License :: OSI Approved :: BSD License
Operating System :: OS Independent
Programming Language :: Python :: 3
Topic :: Software Development :: Libraries :: Application Frameworks

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
setup_requires = setuptools >= 38.3.0
install_requires = Django >= 4.0
